# Composition
from tabulate import tabulate

class ReportBuilder:
    """
    Builds a Markdown report from narrative text, quality scores, and EDA results.

    This class takes the output of the pipeline (narrative insights, data quality scores, 
    and EDA results) and formats them into a Markdown string suitable for reporting 
    or presentation purposes.

    Attributes:
        _narrative (list): List of narrative strings describing insights.
        _scores (dict): Dictionary of data quality scores (missing, duplicates, outliers, balance, overall).
        _eda (dict): Dictionary containing EDA results (summary statistics, missing values, outliers, etc.).
        _weights (dict): Weights used for calculating overall score.
    """

    def __init__(self, narrative, scores, eda_results, weights=None):
        """
        Initialize ReportBuilder.

        Args:
            narrative (list): Narrative text generated by the Narrator class.
            scores (dict): Data quality scores generated by QualityScorer.
            eda_results (dict): EDA results generated by NumericAnalyzer and CategoricalAnalyzer.
            weights (dict, optional): Weights used for quality scoring. Defaults to None.
        """
        self._narrative = narrative
        self._scores = scores
        self._eda = eda_results
        self._weights = weights

    def to_markdown(self):
        """
        Convert the narratives, scores, and EDA results into a Markdown formatted report.

        Returns:
            str: Markdown string containing the report with sections:
                - Narrative Insights
                - Quality Scores (tabulated)
                - Scoring Weights (if available)
        """
        md = ["# Automated EDA Report\n", "## Narrative Insights"]
        for s in self._narrative:
            md.append(f"- {s}")
        
        md.append("\n## Quality Scores")
        rows = [(k, f"{v:.2f}") for k, v in self._scores.items()]
        md.append(tabulate(rows, headers=["Metric", "Score"], tablefmt="github"))
        
        # Add weights information if available
        if self._weights:
            md.append("\n## Scoring Weights")
            md.append("The overall quality score is calculated using the following weights:")
            weight_rows = [(k, f"{v*100:.1f}%") for k, v in self._weights.items()]
            md.append(tabulate(weight_rows, headers=["Metric", "Weight"], tablefmt="github"))
        
        return "\n\n".join(md)
