@startuml
' Define the facade/orchestrator
class Dataset {
}

' Define components
class DataLoader
class Preprocessor
class EDAAnalyzer
class QualityScorer
class Narrator
class ReportBuilder

' Facade relationships (Dataset orchestrates these components)
Dataset --> DataLoader
Dataset --> Preprocessor
Dataset --> EDAAnalyzer
Dataset --> QualityScorer
Dataset --> Narrator
Dataset --> ReportBuilder
@enduml
